<resources>
    <string name="app_name">ChessTimer_V2</string>
    <string name="action_theme">Dark Theme</string>

    <string name="one_min_text">1 min</string>
    <string name="five_min_text">5 min</string>
    <string name="ten_min_text">10 min</string>
    <string name="fifteen_min_text">15 min</string>
    <string name="twenty_min_text">20 min</string>
    <string name="thirty_min_text">30 min</string>
    <string name="dialog_title_text">Reset The Clock?</string>
    <string name="reset_dialog_text">Reset</string>
    <string name="cancel_dialog_text">Cancel</string>

    <string name="one_min_timer" translatable="false">01:00</string>
    <string name="five_min_timer" translatable="false">05:00</string>
    <string name="ten_min_timer" translatable="false">10:00</string>
    <string name="fifteen_min_timer" translatable="false">15:00</string>
    <string name="twenty_min_timer" translatable="false">20:00</string>
    <string name="thirty_min_timer" translatable="false">30:00</string>


    <string name="stop_the_timer" translatable="false">00:00</string>
</resources>