<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/one_min_button"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="@dimen/main_button_height"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/purple_dark"
        android:text="@string/one_min_text"
        android:textColor="@color/white"
        android:theme="@style/main_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/five_min_button"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="@dimen/main_button_height"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/purple_dark"
        android:textColor="@color/white"
        android:text="@string/five_min_text"
        android:theme="@style/main_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ten_min_button"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="@dimen/main_button_height"
        android:layout_marginTop="110dp"
        android:layout_marginStart="50dp"
        android:backgroundTint="@color/purple_dark"
        android:textColor="@color/white"
        android:text="@string/ten_min_text"
        android:theme="@style/main_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/one_min_button"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/fifteen_min_button"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="@dimen/main_button_height"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/purple_dark"
        android:textColor="@color/white"
        android:text="@string/fifteen_min_text"
        android:theme="@style/main_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/five_min_button"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/twenty_min_button"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="@dimen/main_button_height"
        android:layout_marginTop="110dp"
        android:layout_marginStart="50dp"
        android:backgroundTint="@color/purple_dark"
        android:textColor="@color/white"
        android:text="@string/twenty_min_text"
        android:theme="@style/main_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ten_min_button"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/thirty_min_button"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="@dimen/main_button_height"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/purple_dark"
        android:textColor="@color/white"
        android:text="@string/thirty_min_text"
        android:theme="@style/main_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fifteen_min_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>